[fix #70720678] compose email 'select template' label z-index issue

--- a/app/themes/default/css/zurmo-amazon.css
+++ b/app/themes/default/css/zurmo-amazon.css
@@ -5488,6 +5488,7 @@ div.radio-input .hasDropDown {
   color: #999;
   font-size: 12px;
   font-weight: normal;
+  z-index: 10;
 }
 .hasParallelFields,
 .hasHalfs {
