--- a/app/themes/default/less/zurmo.less
+++ b/app/themes/default/less/zurmo.less
@@ -4294,21 +4294,17 @@ div.radio-input{
 /*=Temp Addreess Fields*/
 .overlay-label-field{
 	position:relative;
-	//padding-bottom:15px;
 	.clearfix();
-}
-
-.overlay-label-field label {
-	position: absolute !important;
-	text-indent: 4px;
-	top: 6px;
-	color: #999;
-	font-size: 12px;
-	font-weight: normal;
-}
-
-.overlay-label-field input{
-
+	input{ }
+	label {
+		position: absolute !important;
+		text-indent: 4px;
+		top: 6px;
+		color: #999;
+		font-size: 12px;
+		font-weight: normal;
+		z-index: 10;
+	}
 }
 
 .hasParallelFields,
